opam-version: "1.2"
name: "olmi"
version: "1.1"
maintainer: "xvw <xavier.vdw@gmail.com>"
authors: "xvw <xavier.vdw@gmail.com>"
homepage: "https://github.com/xvw/olmi"
bug-reports: "https://github.com/xvw/olmi/issues"
license: "GPLv3"
dev-repo: "https://github.com/xvw/olmi.git"
build: [["jbuilder" "build" "-p" name "-j" jobs]]
available: [ ocaml-version >= "4.00.0" ]
depends: [
  "ocamlfind" {build}
  "jbuilder" {build}
]

